--- a/mypractice/02_04.html
+++ b/mypractice/02_04.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script type="text/javascript" src="../libs/three.js"></script>
+    <script type="text/javascript" src="../libs/ParametricGeometries.js"></script>
+    <script type="text/javascript" src="../libs/ConvexGeometry.js"></script>
 
     <script type="text/javascript" src="../libs/stats.js"></script>
     <script type="text/javascript" src="../libs/dat.gui.js"></script>
@@ -24,22 +26,123 @@
 
 <script>
     function init(){
-        //var stats= initStats();
+        const stats= (()=>{
+            const stats=new Stats()
+            stats.setMode(0) //0：fps 1:ms
 
-        var scene =new THREE.Scene();
+            stats.domElement.style.position="absolute"
+            stats.domElement.style.left="0px"
+            stats.domElement.style.top="0px"
 
-        var camera = new THREE.Camera(45,window.innerHeight/window.innerHeight,0.1,1000)
+            document.getElementById("Stats-output").appendChild(stats.domElement)
+            return stats
+        })()
+
+        const scene =new THREE.Scene();
+
+        const axes = new THREE.AxisHelper(20);
+        scene.add(axes);
+
+        const camera = new THREE.PerspectiveCamera(45,window.innerWidth/window.innerHeight,0.1,1000)
         scene.add(camera)
 
-        var renderer=new THREE.WebGLRenderer();
+        const renderer=new THREE.WebGLRenderer();
         renderer.setClearColor(new THREE.Color(0xEEEEEE,1.0))
-
         renderer.setSize(window.innerWidth,window.innerHeight)
         renderer.shadowMapEnabled=true
 
+        const planeGemetry=new THREE.PlaneGeometry(60,40,4,4)
+        const planeMaterial=new THREE.MeshLambertMaterial({color:0xffffff})
+        const plane=new THREE.Mesh(planeGemetry,planeMaterial)
+        plane.receiveShadow=true
+        plane.rotation.x=-0.5*Math.PI
+        plane.position.x=0
+        plane.position.y=0
+        plane.position.z=0
+        scene.add(plane)
+
+        camera.position.x=-50
+        camera.position.y=30
+        camera.position.z=20
+        camera.lookAt(new THREE.Vector3(-10,0,0))
+
+        const ambientLight=new THREE.AmbientLight(0x090909)
+        scene.add(ambientLight)
+
+        const spotLight=new THREE.SpotLight(0xffffff)
+        spotLight.position.set(-40,40,50)
+        spotLight.castShadow=true
+        scene.add(spotLight)
+
+
+        //todo 添加几何体
+        const addGeomotries=()=>{
+            const geoms=[];
+            geoms.push(new THREE.CylinderGeometry(1,4,4,20)) //圆柱体 顶半径 底半径 高度 面
+            geoms.push(new THREE.BoxGeometry(2,2,2)) //立方体
+            geoms.push(new THREE.SphereGeometry(2)) //球体
+            geoms.push(new THREE.IcosahedronGeometry(2)) //20面体
+
+            geoms.push(new THREE.ParametricGeometry(THREE.ParametricGeometries.mobius3d,20,10)) //莫比乌斯环，THREE.ParametricGeometries 有不少几何体
+            geoms.push(new THREE.ParametricGeometry(THREE.ParametricGeometries.klein,20,10)) //莫比乌斯环，THREE.ParametricGeometries 有不少几何体
+            //顶点阵列
+            var points=[
+                new THREE.Vector3(2,2,2),
+                new THREE.Vector3(2, 2, -2),
+                new THREE.Vector3(2,-2,2),
+                new THREE.Vector3(2,-2,-2),
+                new THREE.Vector3(-2,2,2),
+                new THREE.Vector3(-2, 2, -2),
+                new THREE.Vector3(-2,-2,2),
+                new THREE.Vector3(-2,-2,-2)
+            ]
+            //定点阵列生成凸几何
+            geoms.push(new THREE.ConvexGeometry(points))
+
+            const pts=[];
+            const detail=.1;
+            const radius=3;
+            for (var angle = 0.0; angle < Math.PI; angle += detail)//loop from 0.0 radians to PI (0 - 180 degrees)
+                pts.push(new THREE.Vector3(Math.cos(angle) * radius, 0, Math.sin(angle) * radius));//angle/radius to x,z
+            geoms.push(new THREE.LatheGeometry(pts, 12));
+
+            geoms.push(new THREE.OctahedronGeometry(3));//正八面体
+            geoms.push(new THREE.TetrahedronGeometry(3)) //四面体
+            geoms.push(new THREE.TorusGeometry(3, 1, 10, 10));//半径 管道半径
+            geoms.push(new THREE.TorusKnotGeometry(3, 0.5, 50, 20));
+
+
+            let j=0;
+            for(let i=0;i<geoms.length;i++){
+                const materials=[
+                    new THREE.MeshLambertMaterial({color:Math.random()*0xffffff,shading:THREE.FlatShading}),
+                    new THREE.MeshBasicMaterial({color:0x000000,wireframe:true})
+                ]
+
+                const mesh = THREE.SceneUtils.createMultiMaterialObject(geoms[i], materials);
+                mesh.traverse((e)=>e.castShadow = true)
+
+                mesh.position.x = -24 + ((i % 4) * 12);
+                mesh.position.y = 4;
+                mesh.position.z = -8 + (j * 12);
+
+                console.log(mesh.children[0].geometry.type+"  x:"+mesh.position.x+" y:"+mesh.position.y+" z:"+mesh.position.z)
+
+                if ((i + 1) % 4 == 0) j++;
+                scene.add(mesh);
+            }
+        }
+        addGeomotries()
+
 
         document.getElementById("WebGL-output").appendChild(renderer.domElement);
-        renderer.render(scene,camera)
+
+        const render=()=>{
+            stats.update();
+            renderer.render(scene,camera)
+            requestAnimationFrame(render)
+        }
+        render()
 
     }
     window.onload= init;
